# backend/swagger.yaml
@@ -828,5 +828,57 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorResponse'
-
+  /auth/delete-account :
+    delete:
+      tags: [auth]
+      summary: "Supprimer le compte"
+      description: "Supprimer le compte de l'utilisateur connecté via le token d'authentification"
+      security:
+        - bearerAuth: []
+      requestBody:
+       required: true
+       content:
+         application/json:
+           schema:
+             type: object
+             required:
+               - refreshToken
+             properties:
+               refreshToken:
+                 type: string
+                 description: Token de rafraîchissement de l'utilisateur
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '400':
+          description: Erreur de validation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+        '401' :
+          description: Erreur d'authentification
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+        '404':
+          description: Utilisateur non trouvé
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
+        '500':
+          description: Erreur interne du serveur
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorResponse'
 
